# ty

./: .ecformat_ignore  .editorconfig  .gitattributes  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  _typos.toml  dist-workspace.toml  mkdocs.template.yml  mkdocs.yml  pyproject.toml
.github/: actionlint.yaml  renovate.json5  zizmor.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  2_question.yaml  config.yml
.github/workflows/: build-binaries.yml  build-docker.yml  ci.yaml  daily_property_tests.yml  notify-dependents.yml  publish-docs.yml  publish-mirror.yml  publish-playground.yml  publish-pypi.yml  publish-versions.yml  publish-wasm.yml  release.yml
assets/badge/: v0.json
crates/ty_ide/src/: all_symbols.rs
crates/ty_server/src/server/api/requests/: on_type_formatting.rs
docs/: README.md  coming-from-mypy-or-pyright.md  configuration.md  editors.md  exclusions.md  index.md  installation.md  modules.md  python-version.md  requirements.in  requirements.txt  rules.md  suppression.md  type-checking.md
docs/.overrides/partials/integrations/analytics/: fathom.html
docs/advanced/: gradual-union-intersection.excalidraw  set-theoretic-gradual-types.md  subtyping-poset.excalidraw  type-relations.excalidraw  types-as-sets.excalidraw
docs/editors/: settings.md
docs/features/: auto-imports.md  diagnostics.md  editor.md  language-server.md  quick-fixes.md  type-checking.md  type-system.md
docs/js/: ty-editor.js
docs/reference/: configuration.md  editor-settings.md  env.md  exit-codes.md  rule-mapping.md  rules.md  type-system-features.md  typing-faq.md
python/ty/: __main__.py
scripts/: autogenerate_files.sh  benchmark_ty_pgo.sh  benchmark_ty_pgo_instructions.sh  build_ty_pgo.sh  compare_ty_pgo_instructions.py  manual-github-release.sh  release.sh  test_update_schemastore.py  transform_readme.py  update_docs_toc.py  update_schemastore.py
scripts/tests/: test_update_schemastore.py
