[project]
name = "ty"
version = "0.0.0a1"
description = "This project is coming soon."
readme = "README.md"
authors = [{ name = "Astral Software Inc.", email = "hey@astral.sh" }]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"
manifest-path = "ruff/crates/red_knot/Cargo.toml"
module-name = "ty"
python-source = "python"
strip = true
include = [
    { path = "ruff/rust-toolchain.toml", format = ["sdist", "wheel"] },
    { path = "LICENSE-APACHE", format = "sdist" },
    { path = "LICENSE-MIT", format = "sdist" },
]
